--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -92,7 +92,7 @@ validator.risk.radio.required=Please choose one of these choices
 validator.risk.meter.required=Please select the image that best represents your tolerance for risk.
 validator.risk.projection.required=Please choose an investment strategy.
 
-validator.acctType.requiredMsg=*Account Type is required.
+validator.accounttype.requiredMsg=*Account Type is required.
 validator.firstName.requiredMsg=*First Name is required.
 validator.lastName.requiredMsg=*Last Name is required.
 validator.citizenship.requiredMsg=*Must be US Citizen.
