--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -129,11 +129,12 @@ validator.bdentity.requiredMsg=*Entity is required.
 
 validator.fundtype.requiredMsg=*Fund type is required.
 validator.investamt.requiredMsg=*Investment amount is required.
+validator.investamtless.requiredMsg=*Investment amount should be greater than $50000.
 validator.bankaccounttype.requiredMsg=*Account type is required.
 validator.bankname.requiredMsg=*Bank name is required.
 validator.bankaccountname.requiredMsg=*Name on bank account is required.
-validator.bankcityState.requiredMsg=*Bank City/State is required!
-validator.bankphoneno.requiredMsg=*Bank Phone number is required!
+validator.bankcityState.requiredMsg=*Bank City/State is required.
+validator.bankphoneno.requiredMsg=*Bank Phone number is required.
 validator.abaroutingno.requiredMsg=*ABA Routing Number is required.
 validator.bankaccountno.requiredMsg=*Bank Account Number is required.
 validator.bankaccounttitle.requiredMsg=*Account Title is required.
@@ -144,7 +145,8 @@ validator.fullpartial.requiredMsg=*Full/Partial transfer is required.
 
 validator.transfrequency.requiredMsg=*Frequency is required.
 validator.banktitle.requiredMsg=*Bank Account title is required.
-validator.transamt.requiredMsg=*Amount is required.
+validator.transamt.requiredMsg=*Transaction Amount is required.
+validator.transamtless.requiredMsg=*Transaction Amount should be greater than $50.
 validator.transstartdate.requiredMsg=*Start date is required.
 
 validator.empstatus.requiredMsg=*Employment status is required.
@@ -154,3 +156,11 @@ validator.sourceincome.requiredMsg=*Source of income is required.
 validator.beneSharegreter.requiredMsg=*Share should be greater than 0.
 
 validator.validemail.requiredMsg=*Enter valid  Email address.
+validator.validateStartDate.formatMsg=*Start date should be greater than today date.
+validator.validateStartDate.requiredMsg=*Enter valid Start Date (mm/dd/yyyy)
+validator.advisorId.requiredMsg=*Advisor ID is required.
+validator.brokerAccno.requiredMsg=*TD Ameritrade Retail Brokerage Account Number is required.
+validator.firmaccountno.requiredMsg=*Firm Account Number is required.
+validator.brokerfirmname.requiredMsg=*Existing Advisory Firm Name is required.
+validator.brokerfirmnamefalg.requiredMsg=*Is this a Retail or Advisor managed account is required.
+
