--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -129,7 +129,7 @@ validator.bdentity.requiredMsg=*Entity is required.
 
 validator.fundtype.requiredMsg=*Fund type is required.
 validator.investamt.requiredMsg=*Investment amount is required.
-validator.investamtless.requiredMsg=*Investment amount should be greater than $50000.
+validator.investamtless.requiredMsg=*Investment amount should be minimum $50000.
 validator.bankaccounttype.requiredMsg=*Account type is required.
 validator.bankname.requiredMsg=*Bank name is required.
 validator.bankaccountname.requiredMsg=*Name on bank account is required.
@@ -146,7 +146,7 @@ validator.fullpartial.requiredMsg=*Full/Partial transfer is required.
 validator.transfrequency.requiredMsg=*Frequency is required.
 validator.banktitle.requiredMsg=*Bank Account title is required.
 validator.transamt.requiredMsg=*Transaction Amount is required.
-validator.transamtless.requiredMsg=*Transaction Amount should be greater than $50.
+validator.transamtless.requiredMsg=*Transaction Amount should be minimum $50.
 validator.transstartdate.requiredMsg=*Start date is required.
 
 validator.empstatus.requiredMsg=*Employment status is required.
