--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -163,4 +163,5 @@ validator.brokerAccno.requiredMsg=*TD Ameritrade Retail Brokerage Account Number
 validator.firmaccountno.requiredMsg=*Firm Account Number is required.
 validator.brokerfirmname.requiredMsg=*Existing Advisory Firm Name is required.
 validator.brokerfirmnamefalg.requiredMsg=*Is this a Retail or Advisor managed account is required.
-
+validator.validdobminor.formatMsg=*Birth date should not be greater than today date.
+validator.validdobother.formatMsg=*Birth date should be less than today date.
