--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -71,7 +71,7 @@ signup.EX.105=Exception: Failed to save question/answer data. Your session may h
 custody.100=Custody process is not defined.
 dctd.100=Cannot start TD application (No account number was assigned).
 dctd.102=Cannot start TD application (User is not logged in).
-dctd.103=Account is already manged by you.
+dctd.103=This account is already managed.
 dctd.101=TD service is not active.
 dctd.EX.101=TD service system error.
 
