--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -129,7 +129,7 @@ validator.bdentity.requiredMsg=*Entity is required.
 
 validator.fundtype.requiredMsg=*Fund type is required.
 validator.investamt.requiredMsg=*Investment amount is required.
-validator.investamtless.requiredMsg=*Investment amount should be minimum $50,000.
+validator.investamtless.requiredMsg=*Minimum of {0} investment required.
 validator.bankaccounttype.requiredMsg=*Account type is required.
 validator.bankname.requiredMsg=*Bank name is required.
 validator.bankaccountname.requiredMsg=*Name on bank account is required.
