--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -104,7 +104,7 @@ validator.ssn.requiredMsg=*SSN is required.
 validator.ssn.formatMsg=*Enter valid SSN (xxx-xx-xxxx).
 validator.dob.requiredMsg=*Birthdate is required.
 validator.dob.formatMsg=*Enter valid Birthdate (mm/dd/yyyy).
-validator.validyear.formatMsg=*Birth date not before than 130 year.
+validator.validyear.formatMsg=*Birth date is not valid.
 
 validator.resstreet.requiredMsg=*Residence Street address is required.
 validator.mailstreet.requiredMsg=*Mailing Street address is required.
