Prashant Revised 12/23/2016 - Fixes from UAT testing

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -75,8 +75,8 @@ dctd.103=This account is already managed.
 dctd.101=TD service is not active.
 dctd.EX.101=TD service system error.
 
-validator.investment.required=Minimum of {0} investment required.
-validator.investment.constraint=Minimum of {0} investment required.
+validator.investment.required=Minimum of ${0} investment required.
+validator.investment.constraint=Minimum of ${0} investment required.
 validator.age.required=Age is required.
 validator.age.constraint=Age must be between 18 and 100 years.
 validator.goal.required=Please choose investment strategy
