Abhang Checked in 12/29/2016 MX aggregator Integration in web application Code

--- a/Invessence/modules/pom.xml
+++ b/Invessence/modules/pom.xml
@@ -29,5 +29,6 @@
       <module>reports</module>
       <module>price-processor</module>
       <module>rbsa-preprocessor</module>
+      <module>aggregator</module>
    </modules>
 </project>
