--- a/Invessence/modules/web/src/main/resources/log4j.properties
+++ b/Invessence/modules/web/src/main/resources/log4j.properties
@@ -1,17 +1,17 @@
 # For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-log4j.rootLogger=info, logfile
+log4j.rootLogger=info, logfile, bwslogfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logfile.File=${catalina.base}/logs/invessence.log
+log4j.appender.logfile.File=D:/Project/Abhang/logs/invessence.log
+log4j.appender.logfile.Append = true
   #${catalina.home}/logs/tcm.log
   #${catalina.base}/logs/tcm.log
   #D:/Project/Abhang/logs/tcm.log
-log4j.appender.logfile.Append = true 
 # Keep three backup files.
 #log4j.appender.logfile.MaxBackupIndex=3
 # Pattern to output: date priority [category] - message
@@ -19,7 +19,7 @@ log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
 log4j.appender.bwslogfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.bwslogfile.File=${catalina.base}/logs/broker-webservices.log
+log4j.appender.bwslogfile.File=D:/Project/Abhang/logs/broker-webservices.log
 log4j.appender.bwslogfile.Append = true
 log4j.appender.bwslogfile.MaxBackupIndex=3
 log4j.appender.bwslogfile.layout=org.apache.log4j.PatternLayout
@@ -27,7 +27,7 @@ log4j.appender.bwslogfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
 log4j.additivity.com.invessence.ws=false
 
-log4j.logger.com.invessence.ws=debug, bwslogfile
+log4j.logger.com.invessence.ws=debug, stdout, bwslogfile
 log4j.logger.org.apache.axis=ERROR, stdout, bwslogfile
 log4j.logger.org.springframework=ERROR,stdout
 log4j.logger.org.apache.commons=ERROR,stdout
