--- a/Invessence/modules/web/src/main/resources/log4j.properties
+++ b/Invessence/modules/web/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logfile.File=#${catalina.base}/logs/web.log
+log4j.appender.logfile.File=${catalina.base}/logs/web.log
 log4j.appender.logfile.Append = true
   #${catalina.home}/logs/tcm.log
   #${catalina.base}/logs/tcm.log
@@ -19,7 +19,7 @@ log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d %p [%c] - %m%n
 
 log4j.appender.bwslogfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.bwslogfile.File=#${catalina.base}/logs/broker-webservices.log
+log4j.appender.bwslogfile.File=${catalina.base}/logs/broker-webservices.log
 log4j.appender.bwslogfile.Append = true
 log4j.appender.bwslogfile.MaxBackupIndex=3
 log4j.appender.bwslogfile.layout=org.apache.log4j.PatternLayout
