Checked in 01/06/2017 Ticket 209,215,273,283

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -84,6 +84,7 @@ validator.goal.constraint=Please choose investment strategy
 validator.retireage.required=When do you plan to retire?
 validator.retireage.constraint=Retirement age must be greater than current age.
 validator.retireage.constraint2=Retirement age must be less than 100 years.
+validator.accounttype.retirement=Goal {0} cannot be changed as this is already an IRA. Please reset to Retirement.
 
 validator.college.required=When does your child plan to attend college?
 validator.college.constraint=Number of years to invest must be between 1 and 18 years
