Prashant Revised 01/24/2017 - Fixed bugs identified.

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -50,21 +50,22 @@ signup.3=Warning
 
 signup.U100=This email is already registered.
 signup.U101=Failed to save data.  Your session has timed out.
-signup.U102=Unable to create account. The Link is not valid.
-signup.U103	signup.U103=Sorry, you are attempting to sign-up for account that is already registered.<br/> \
+signup.U102=Unable to create account. The link is not valid.
+signup.U103	Sorry, you are attempting to sign-up for account with an email that is already registered<br/> \
 		Follow the instructions to activate your account or click on forgot password to reset your access.
 signup.U104=This UserID is taken, please try another.
 signup.U105=The Password does not match the required criteria or the two passwords are not identical.
-signup.U106=There was an error when attempting to save this UserID.  Please reach out to support desk.
+signup.U106=There was an error when attempting to save this UserID.  Please reach out to the support desk.
 signup.U107=Email address is invalid, please make sure this email is registered.
 signup.U108=Failed to create user-logon session.
 signup.U109=Unable to activate account. Link is not valid.
 signup.U110=Reset email sent.
+signup.U111=Email is required.
 
 signup.EX.100=Exception: Create UserID/Password, problem attempting to create user.
-signup.EX.101=Exception: Sorry, you are attempting to activate an account with a link which contains invalid data. Please call support.
-signup.EX.102=Exception: Sorry, you are attempting to activate an account with a link which contains invalid data. Please call Support.
-signup.EX.103=Exception: There was an issue with signup.  Please call support.
+signup.EX.101=Exception: Sorry, you are attempting to activate an account with a link which contains invalid data. Please contact support.
+signup.EX.102=Exception: Sorry, you are attempting to activate an account with a link which contains invalid data. Please contact support.
+signup.EX.103=Exception: There was an issue with signup.  Please contact support.
 signup.EX.104=Exception: There was an error attempting to save the questions/answer section.
 signup.EX.105=Exception: Failed to save question/answer data. Your session may have timed out.
 
@@ -75,30 +76,30 @@ dctd.103=This account is already managed.
 dctd.101=TD service is not active.
 dctd.EX.101=TD service system error.
 
-validator.investment.required=Minimum of ${0} investment required.
-validator.investment.constraint=Minimum of ${0} investment required.
+validator.investment.required=A minimum investment of {0} investment required.
+validator.investment.constraint=A minimum investment of {0} investment required.
 validator.age.required=Age is required.
 validator.age.constraint=Age must be between 18 and 100 years.
-validator.goal.required=Please choose investment strategy
-validator.goal.constraint=Please choose investment strategy
-validator.retireage.required=When do you plan to retire?
+validator.goal.required=Please choose an investment strategy
+validator.goal.constraint=Please choose an investment strategy
+validator.retireage.required=At what age do you plan to retire?
 validator.retireage.constraint=Retirement age must be greater than current age.
 validator.retireage.constraint2=Retirement age must be less than 100 years.
 validator.accounttype.retirement=Goal cannot be changed as this is already an IRA. Please reset to Retirement.
 
-validator.college.required=When does your child plan to attend college?
+validator.college.required=At what age does your child plan to start college?
 validator.college.constraint=Number of years to invest must be between 1 and 18 years
-validator.otherhorizon.required=When do you plan to use these funds?
+validator.otherhorizon.required=When do you plan to start drawing on these funds?
 validator.otherhorizon.constraint=Number of years to invest must be between 1 and 100 years
 
 validator.risk.radio.required=Please choose one of these choices
-validator.risk.meter.required=Please select the image that best represents your tolerance for risk.
+validator.risk.meter.required=Please select the option that best represents your tolerance for risk.
 validator.risk.projection.required=Please choose an investment strategy.
 
 validator.accounttype.requiredMsg=*Account Type is required.
 validator.firstName.requiredMsg=*First Name is required.
 validator.lastName.requiredMsg=*Last Name is required.
-validator.citizenship.requiredMsg=*Must be US Citizen.
+validator.citizenship.requiredMsg=*You must be a US Citizen.
 validator.email.requiredMsg=*Email address is required.
 validator.phoneno.requiredMsg=*Phone number is required.
 validator.ssn.requiredMsg=*SSN is required.
@@ -131,7 +132,7 @@ validator.bdentity.requiredMsg=*Entity is required.
 
 validator.fundtype.requiredMsg=*Fund type is required.
 validator.investamt.requiredMsg=*Investment amount is required.
-validator.investamtless.requiredMsg=*Minimum of ${0} investment required.
+validator.investamtless.requiredMsg=*A minimum investment of {0} is required.
 validator.bankaccounttype.requiredMsg=*Account type is required.
 validator.bankname.requiredMsg=*Bank name is required.
 validator.bankaccountname.requiredMsg=*Name on bank account is required.
@@ -148,7 +149,7 @@ validator.fullpartial.requiredMsg=*Full/Partial transfer is required.
 validator.transfrequency.requiredMsg=*Frequency is required.
 validator.banktitle.requiredMsg=*Bank Account title is required.
 validator.transamt.requiredMsg=*Transaction Amount is required.
-validator.transamtless.requiredMsg=*Transaction Amount should be minimum $50.
+validator.transamtless.requiredMsg=*The minimum transfer amount is $50 per transfer.
 validator.transstartdate.requiredMsg=*Start date is required.
 
 validator.empstatus.requiredMsg=*Employment status is required.
@@ -157,13 +158,13 @@ validator.occupation.requiredMsg=*Occupation is required.
 validator.sourceincome.requiredMsg=*Source of income is required.
 validator.beneSharegreter.requiredMsg=*Share should be greater than 0.
 
-validator.validemail.requiredMsg=*Enter valid  Email address.
-validator.validateStartDate.formatMsg=*Start date should be greater than today date.
-validator.validateStartDate.requiredMsg=*Enter valid Start Date (mm/dd/yyyy)
+validator.validemail.requiredMsg=*Please enter a valid email address.
+validator.validateStartDate.formatMsg=*Start date should be later than today’s date.
+validator.validateStartDate.requiredMsg=*Please enter a valid Start Date (mm/dd/yyyy)
 validator.advisorId.requiredMsg=*Advisor ID is required.
 validator.brokerAccno.requiredMsg=*TD Ameritrade Retail Brokerage Account Number is required.
 validator.firmaccountno.requiredMsg=*Firm Account Number is required.
 validator.brokerfirmname.requiredMsg=*Existing Advisory Firm Name is required.
-validator.brokerfirmnamefalg.requiredMsg=*Is this a Retail or Advisor managed account is required.
-validator.validdobminor.formatMsg=*Birth date should not be greater than today date.
-validator.validdobother.formatMsg=*Birth date should be less than today date.
+validator.brokerfirmnamefalg.requiredMsg=*You must indicate whether this is a Retail or Advisor managed account.
+validator.validdobminor.formatMsg=*Birth date cannot be later than today’s date.
+validator.validdobother.formatMsg=*Birth date cannot be later than today’s date.
