Checked in 01/25/2017 (TCM) - Prakash Lal

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -143,7 +143,7 @@ validator.bankaccountno.requiredMsg=*Bank Account Number is required.
 validator.bankaccounttitle.requiredMsg=*Account Title is required.
 validator.deliveryfirm.requiredMsg=*Name of delivery firm is required.
 validator.deliveryfirmother.requiredMsg=*Name of other delivery firm is required.
-validator.accttype.requiredMsg=*Account Type is required.
+validator.acctType.requiredMsg=*Account Type is required.
 validator.fullpartial.requiredMsg=*Full/Partial transfer is required.
 
 validator.transfrequency.requiredMsg=*Frequency is required.
