Checked in 01/06/2017 special  charater display remove

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -159,12 +159,12 @@ validator.sourceincome.requiredMsg=*Source of income is required.
 validator.beneSharegreter.requiredMsg=*Share should be greater than 0.
 
 validator.validemail.requiredMsg=*Please enter a valid email address.
-validator.validateStartDate.formatMsg=*Start date should be later than today’s date.
+validator.validateStartDate.formatMsg=*Start date should be later than today's date.
 validator.validateStartDate.requiredMsg=*Please enter a valid Start Date (mm/dd/yyyy)
 validator.advisorId.requiredMsg=*Advisor ID is required.
 validator.brokerAccno.requiredMsg=*TD Ameritrade Retail Brokerage Account Number is required.
 validator.firmaccountno.requiredMsg=*Firm Account Number is required.
 validator.brokerfirmname.requiredMsg=*Existing Advisory Firm Name is required.
 validator.brokerfirmnamefalg.requiredMsg=*You must indicate whether this is a Retail or Advisor managed account.
-validator.validdobminor.formatMsg=*Birth date cannot be later than today’s date.
-validator.validdobother.formatMsg=*Birth date cannot be later than today’s date.
+validator.validdobminor.formatMsg=*Birth date cannot be later than today's date.
+validator.validdobother.formatMsg=*Birth date cannot be later than today's date.
