Prashant Revised 01/31/2017 - PREUAT fixes

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -76,8 +76,8 @@ dctd.103=This account is already managed.
 dctd.101=TD service is not active.
 dctd.EX.101=TD service system error.
 
-validator.investment.required=A minimum investment of {0} investment required.
-validator.investment.constraint=A minimum investment of {0} investment required.
+validator.investment.required=A minimum investment of {0} is required.
+validator.investment.constraint=A minimum investment of {0} is required.
 validator.age.required=Age is required.
 validator.age.constraint=Age must be between 18 and 100 years.
 validator.goal.required=Please choose an investment strategy
