Checked in 03/02/2017 UI integration - akhilesh

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -79,6 +79,18 @@ dctd.EX.101=TD service system error.
 validator.investment.required=A minimum investment of {0} is required.
 validator.investment.constraint=A minimum investment of {0} is required.
 validator.age.required=Age is required.
+validator.wages.required=Salary/Wages is required.
+validator.total.expenses.required=Total Expenses is required.
+validator.total.debt.required=Total Debt is required.
+validator.employment.situation.required=Employment Situation is required.
+validator.selection.required=Select one of the option.
+validator.sources.income.required=Sources of income is required.
+validator.level.investment.required=level of investment is required.
+validator.investment.approach.required=Investment approach is required.
+validator.level.volatility.required=Level of volatility is required.
+validator.long-term.investment.required=long-term investment is required.
+validator.liquid.asset.required=Liquid Asset is required.
+validator.other.investments.required=Other Investments is required.
 validator.age.constraint=Age must be between 18 and 100 years.
 validator.goal.required=Please choose an investment strategy
 validator.goal.constraint=Please choose an investment strategy
@@ -132,6 +144,7 @@ validator.bdentity.requiredMsg=*Entity is required.
 
 validator.fundtype.requiredMsg=*Fund type is required.
 validator.investamt.requiredMsg=*Investment amount is required.
+validator.plantoinvestamt.requiredMsg=*Plan to Invest is required.
 validator.investamtless.requiredMsg=*A minimum investment of {0} is required.
 validator.bankaccounttype.requiredMsg=*Account type is required.
 validator.bankname.requiredMsg=*Bank name is required.
@@ -168,3 +181,5 @@ validator.brokerfirmname.requiredMsg=*Existing Advisory Firm Name is required.
 validator.brokerfirmnamefalg.requiredMsg=*You must indicate whether this is a Retail or Advisor managed account.
 validator.validdobminor.formatMsg=*Birth date cannot be later than today's date.
 validator.validdobother.formatMsg=*Birth date cannot be later than today's date.
+
+
