--- a/QA_Automation/Invessence/Properties/testdatalocation.properties
+++ b/QA_Automation/Invessence/Properties/testdatalocation.properties
@@ -12,3 +12,4 @@ dbpassword = inv3ss3nc3u530n1y
 portfoliocreation= TestCases\\TestData_Invessence_BB_PortfolioCreation.xlsx
 openaccount= TestCases\\TestData_Invessence_BB_OpenNewAccount.xlsx
 dbmethod= TestCases\\TestData_Invessence_BB_DBmethods.xlsx
+changestrategy = TestCases\\TestData_Invessence_BB_ChangeStrategy.xlsx
