--- a/QA_Automation/Invessence/Properties/testdatalocation.properties
+++ b/QA_Automation/Invessence/Properties/testdatalocation.properties
@@ -10,6 +10,7 @@ dbpassword = inv3ss3nc3u530n1y
 
 #############################################################################
 portfoliocreation= TestCases\\TestData_Invessence_BB_PortfolioCreation.xlsx
+openaccountvisitor =  TestCases\\TestData_Invessence_BB_OpenNewAccountVisitor.xlsx
 openaccount= TestCases\\TestData_Invessence_BB_OpenNewAccount.xlsx
 dbmethod= TestCases\\TestData_Invessence_BB_DBmethods.xlsx
 changestrategy = TestCases\\TestData_Invessence_BB_ChangeStrategy.xlsx
