--- a/QA_Automation/Invessence/Properties/testdatalocation.properties
+++ b/QA_Automation/Invessence/Properties/testdatalocation.properties
@@ -8,9 +8,15 @@ dbUrl=jdbc:mysql://preuat.invessence.com:3306/invdb
 dbusername= webuser
 dbpassword = inv3ss3nc3u530n1y
 
-#############################################################################
-portfoliocreation= TestCases\\TestData_Invessence_BB_PortfolioCreation.xlsx
-openaccountvisitor =  TestCases\\TestData_Invessence_BB_OpenNewAccountVisitor.xlsx
-openaccount= TestCases\\TestData_Invessence_BB_OpenNewAccount.xlsx
-dbmethod= TestCases\\TestData_Invessence_BB_DBmethods.xlsx
-changestrategy = TestCases\\TestData_Invessence_BB_ChangeStrategy.xlsx
+################################Building Benjamins#############################################
+portfoliocreation= TestCases\\BB\\TestData_Invessence_BB_PortfolioCreation.xlsx
+openaccountvisitor =  TestCases\\BB\\TestData_Invessence_BB_OpenNewAccountVisitor.xlsx
+openaccount= TestCases\\BB\\TestData_Invessence_BB_OpenNewAccount.xlsx
+dbmethod= TestCases\\BB\\TestData_Invessence_BB_DBmethods.xlsx
+changestrategy = TestCases\\BB\\TestData_Invessence_BB_ChangeStrategy.xlsx
+
+################################TCM#############################################
+
+openaccount_tcm = TestCases\\TCM\\TestData_Invessence_TCM_OpenNewAccount.xlsx
+openaccountvisitor_tcm = TestCases\\TCM\\TestData_Invessence_TCM_OpenNewAccountVisitor.xlsx
+changestrategy_tcm = TestCases\\TCM\\TestData_Invessence_TCM_ChangeStrategy.xlsx
