--- a/QA_Automation/Invessence/Properties/testdatalocation.properties
+++ b/QA_Automation/Invessence/Properties/testdatalocation.properties
@@ -4,9 +4,14 @@ Results=TestResults\\TestResults
 logfilepath = TestResults\\Failed_Testcases_Logs
 logs =Testlogs\\Automation.logs
 screenshot =TestReports\\screenshots
-dbUrl=jdbc:mysql://preuat.invessence.com:3306/invdb
+preuatdbUrl=jdbc:mysql://preuat.invessence.com:3306/invdb
 dbusername= webuser
 dbpassword = inv3ss3nc3u530n1y
+
+uatdbUrl=jdbc:mysql://uat.invessence.com:3306/invdb
+dbusername= webuser
+dbpassword = inv3ss3nc3u530n1y
+
 
 ################################Building Benjamins#############################################
 portfoliocreation= TestCases\\BB\\TestData_Invessence_BB_PortfolioCreation.xlsx
@@ -14,7 +19,8 @@ openaccountvisitor =  TestCases\\BB\\TestData_Invessence_BB_OpenNewAccountVisito
 openaccount= TestCases\\BB\\TestData_Invessence_BB_OpenNewAccount.xlsx
 dbmethod= TestCases\\BB\\TestData_Invessence_BB_DBmethods.xlsx
 changestrategy = TestCases\\BB\\TestData_Invessence_BB_ChangeStrategy.xlsx
-
+addfunds = TestCases\\BB\\TestData_Invessence_BB_AddFunds.xlsx
+advisorlogin = TestCases\\BB\\TestData_Invessence_BB_AdvisorLogin.xlsx
 ################################TCM#############################################
 
 openaccount_tcm = TestCases\\TCM\\TestData_Invessence_TCM_OpenNewAccount.xlsx
