--- a/QA_Automation/Invessence/Properties/testdatalocation.properties
+++ b/QA_Automation/Invessence/Properties/testdatalocation.properties
@@ -26,3 +26,6 @@ advisorlogin = TestCases\\BB\\TestData_Invessence_BB_AdvisorLogin.xlsx
 openaccount_tcm = TestCases\\TCM\\TestData_Invessence_TCM_OpenNewAccount.xlsx
 openaccountvisitor_tcm = TestCases\\TCM\\TestData_Invessence_TCM_OpenNewAccountVisitor.xlsx
 changestrategy_tcm = TestCases\\TCM\\TestData_Invessence_TCM_ChangeStrategy.xlsx
+
+#######################################PROD#################################################
+openaccount_prod = TestCases\\PROD\\TestData_Invessence_PROD_OpenNewAccount.xlsx
