--- a/QA_Automation/Invessence/Properties/testdatalocation.properties
+++ b/QA_Automation/Invessence/Properties/testdatalocation.properties
@@ -12,6 +12,7 @@ uatdbUrl=jdbc:mysql://uat.invessence.com:3306/invdb
 dbusername= webuser
 dbpassword = inv3ss3nc3u530n1y
 
+proddbUrl= 
 
 ################################Building Benjamins#############################################
 portfoliocreation= TestCases\\BB\\TestData_Invessence_BB_PortfolioCreation.xlsx
@@ -20,7 +21,8 @@ openaccount= TestCases\\BB\\TestData_Invessence_BB_OpenNewAccount.xlsx
 dbmethod= TestCases\\BB\\TestData_Invessence_BB_DBmethods.xlsx
 changestrategy = TestCases\\BB\\TestData_Invessence_BB_ChangeStrategy.xlsx
 addfunds = TestCases\\BB\\TestData_Invessence_BB_AddFunds.xlsx
-advisorlogin = TestCases\\BB\\TestData_Invessence_BB_AdvisorLogin.xlsx
+advisorlogin_activeaccount = TestCases\\BB\\TestData_Invessence_BB_AdvisorLogin_ActiveAccount.xlsx
+advisorlogin_pendingaccount=  TestCases\\BB\\TestData_Invessence_BB_AdvisorLogin_PendingAccount.xlsx
 ################################TCM#############################################
 
 openaccount_tcm = TestCases\\TCM\\TestData_Invessence_TCM_OpenNewAccount.xlsx
@@ -29,3 +31,4 @@ changestrategy_tcm = TestCases\\TCM\\TestData_Invessence_TCM_ChangeStrategy.xlsx
 
 #######################################PROD#################################################
 openaccount_prod = TestCases\\PROD\\TestData_Invessence_PROD_OpenNewAccount.xlsx
+openaccountvisitor_prod= TestCases\\PROD\\TestData_Invessence_PROD_OpenNewAccountVisitor.xlsx
