Prashant 04/102017 - Post Release fixes (Email process to send HTML templates)

--- a/Invessence/modules/web/src/main/resources/webemailer.properties
+++ b/Invessence/modules/web/src/main/resources/webemailer.properties
@@ -64,11 +64,20 @@ txt.locked.email=\n\
   Admin Team, \n \
   {10} \n
 
-html.support.info=${email_templates_dir}buildingbenjamins-SupportInfo.html
-html.reset.email=${email_templates_dir}buildingbenjamins-Reset.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.activated.email=${email_templates_dir}buildingbenjamins-Activated.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.welcome.email=${email_templates_dir}buildingbenjamins-Welcome.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.welcome-adv.email=${email_templates_dir}buildingbenjamins-Welcome-Adv.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.locked.email=${email_templates_dir}buildingbenjamins-Locked.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.survey.email=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
-html.invoice.email=${email_templates_dir}invoice.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.bb.support.info=${email_templates_dir}buildingbenjamins-SupportInfo.html
+html.bb.reset.email=${email_templates_dir}buildingbenjamins-Reset.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.bb.activated.email=${email_templates_dir}buildingbenjamins-Activated.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.bb.welcome.email=${email_templates_dir}buildingbenjamins-Welcome.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.bb.welcome-adv.email=${email_templates_dir}buildingbenjamins-Welcome-Adv.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.bb.locked.email=${email_templates_dir}buildingbenjamins-Locked.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.bb.survey.email=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.bb.invoice.email=${email_templates_dir}invoice.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+
+html.tcm.support.info=${email_templates_dir}traditionadvisers-SupportInfo.html
+html.tcm.reset.email=${email_templates_dir}traditionadvisers-Reset.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.tcm.activated.email=${email_templates_dir}traditionadvisers-Activated.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.tcm.welcome.email=${email_templates_dir}traditionadvisers-Welcome.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.tcm.welcome-adv.email=${email_templates_dir}traditionadvisers-Welcome-Adv.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.tcm.locked.email=${email_templates_dir}traditionadvisers-Locked.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.tcm.survey.email=${email_templates_dir}survey.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
+html.tcm.invoice.email=${email_templates_dir}invoice.html~{0}~{1}~{2}~{3}~{4}~{5}~{6}~{7}~{8}~{9}~{10}~{11}
