Abhang checked in 05/19/2017 File Processor Code

--- a/Invessence/modules/pom.xml
+++ b/Invessence/modules/pom.xml
@@ -30,5 +30,6 @@
       <module>price-processor</module>
       <module>rbsa-preprocessor</module>
       <module>aggregator</module>
+      <module>file-processor</module>
    </modules>
 </project>
