--- a/Invessence/modules/pom.xml
+++ b/Invessence/modules/pom.xml
@@ -29,7 +29,6 @@
       <module>reports</module>
       <module>price-processor</module>
       <module>rbsa-preprocessor</module>
-      <module>aggregator</module>
-      <module>file-processor</module>
+      <module>aggregator</module><module>file-processor</module>
    </modules>
 </project>
