--- a/Invessence/modules/pom.xml
+++ b/Invessence/modules/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+   <modelVersion>4.0.0</modelVersion>
+
 
    <parent>
       <groupId>com.invessence</groupId>
@@ -18,6 +18,7 @@
 
    <modules>
       <module>core</module>
+      <module>FinLib</module>
       <module>invmodel</module>
       <module>service</module>
       <module>broker-webservices</module>
@@ -29,6 +30,7 @@
       <module>reports</module>
       <module>price-processor</module>
       <module>rbsa-preprocessor</module>
-      <module>aggregator</module><module>file-processor</module>
+      <module>aggregator</module>
+      <module>file-processor</module>
    </modules>
 </project>
