Jigar 06/14/2017 - Integrating/Testing ojAlgo in invmodel.  Only dependencies defined.

--- a/Invessence/modules/invmodel/pom.xml
+++ b/Invessence/modules/invmodel/pom.xml
@@ -16,6 +16,11 @@
 
    <dependencies>
       <dependency>
+          <groupId>org.ojalgo</groupId>
+          <artifactId>ojalgo</artifactId>
+          <version>43.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
           <groupId>javax.ejb</groupId>
           <artifactId>ejb-api</artifactId>
           <version>3.0</version>
