Prashant 06/14/2017 - FinLib to ojalgo Fixed Module Name

--- a/Invessence/modules/pom.xml
+++ b/Invessence/modules/pom.xml
@@ -18,7 +18,7 @@
 
    <modules>
       <module>core</module>
-      <module>FinLib</module>
+      <module>ojalgo</module>
       <module>invmodel</module>
       <module>service</module>
       <module>broker-webservices</module>
