--- a/Invessence/modules/parent/pom.xml
+++ b/Invessence/modules/parent/pom.xml
@@ -59,6 +59,11 @@
             <version>${invessence.version}</version>
          </dependency>
          <dependency>
+            <groupId>org.ojalgo</groupId>
+            <artifactId>ojalgo</artifactId>
+            <version>43.1-SNAPSHOT</version>
+         </dependency>
+         <dependency>
             <groupId>com.invessence</groupId>
             <artifactId>invmodel</artifactId>
             <version>${invessence.version}</version>
