Prashant 06/14/2017 - Checkin for TradeProcess

--- a/Invessence/modules/price-processor/src/main/resources/Configuration.properties
+++ b/Invessence/modules/price-processor/src/main/resources/Configuration.properties
@@ -1,4 +1,4 @@
-file.source.directory=D:/Project/Sudhir/logs/CSIDATA
+file.source.directory=D:/tmp
 file.sftp.host=preuat.invessence.com
 file.sftp.port=22
 file.sftp.user=abhangp
