Prashant 06/16/2017 - Added ojalgo process

--- a/Invessence/modules/parent/pom.xml
+++ b/Invessence/modules/parent/pom.xml
@@ -447,23 +447,8 @@
       <profile>
          <id>2A-HOST-WIN</id>
          <properties>
-            <base.data.dir>C:\\INV\\data</base.data.dir>
-            <base.rbsa.dir>C:\\INV\\RBSA</base.rbsa.dir>
-            <base.clientdata.dir>C:\\INV\\client</base.clientdata.dir>
-            <base.advisor.dir>C:\\INV\\advisor</base.advisor.dir>
             <!--<catalina.base>C:\\workspace\\web\\</catalina.base> Ned to be change -->
-            <catalina.base>D:\\Project\\Sudhir\\</catalina.base>
-            <base.web.dir>C:\\workspace\\web\\www\\ROOT</base.web.dir>
-            <!-- Fix these paths based on above base directory,  also, make sure that directories are created on prod -->
-            <advisor.upload.localdir>${base.advisor.dir}\\upload\\</advisor.upload.localdir>
-            <advisor.download.localdir>${base.advisor.dir}\\download\\</advisor.download.localdir>
-            <ftp.localdir>${base.data.dir}\\eodfiles\\</ftp.localdir>
-            <rsba.localdir>${base.rbsa.dir}\\RBSA\\</rsba.localdir>
-            <report.localdir>${base.data.dir}\\rpt\\</report.localdir>
-            <pdf.localdir>${base.data.dir}\\pdf\\</pdf.localdir>
-            <doc.localdir>${base.data.dir}\\doc\\</doc.localdir>
-            <web_reports_dir>${base.web.dir}\\static\\reports\\</web_reports_dir>
-            <email_templates_dir>${base.web.dir}\\template\html\\</email_templates_dir>
+            <catalina.base>D:\\temp\\</catalina.base>
          </properties>
       </profile>
       <profile>
