Code check in By Sagar for UOB issue fixing

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -183,3 +183,20 @@ validator.validdobminor.formatMsg=*Birth date cannot be later than today's date.
 validator.validdobother.formatMsg=*Birth date cannot be later than today's date.
 
 
+
+validator.uob.age.required=Age is required.
+validator.uob.plantoinvestamt.requiredMsg=Enter a number (years) for how long you plan to invest
+validator.uob.investamt.requiredMsg=Investment amount is required.
+validator.uob.goal.required=Please choose an investment strategy.
+validator.uob.wages.required=Salary/Wages is required.
+validator.uob.liquid.asset.required=Liquid asset is required.
+validator.uob.other.investments.required=Other investments are required.
+validator.uob.total.expenses.required=Total Expenses is required.
+validator.uob.total.debt.required=Total Debt is required.
+validator.uob.employment.situation.required=Employment situation is required.
+validator.uob.sources.income.required=Sources of income is required.
+validator.uob.selection.required=Select one of the option.
+validator.uob.level.investment.required=Level of investment is required.
+validator.uob.investment.approach.required=Investment approach is required.
+validator.uob.level.volatility.required=Level of volatility is required.
+validator.uob.long-term.investment.required=Long-term investment is required.
