--- a/Invessence/modules/file-processor/pom.xml
+++ b/Invessence/modules/file-processor/pom.xml
@@ -16,6 +16,12 @@
 
    <dependencies>
       <dependency>
+         <groupId>com.invessence</groupId>
+         <artifactId>emailer</artifactId>
+         <version>1.0-SNAPSHOT</version>
+         <scope>compile</scope>
+      </dependency>
+      <dependency>
 <groupId>com.invessence</groupId>
 <artifactId>service</artifactId><version>1.0-SNAPSHOT</version>
 </dependency>
