--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -187,7 +187,7 @@ validator.validdobother.formatMsg=*Birth date cannot be later than today's date.
 validator.uob.age.required=Age is required.
 validator.uob.plantoinvestamt.requiredMsg=Enter a number (years) for how long you plan to invest
 validator.uob.investamt.requiredMsg=Investment amount is required.
-validator.uob.goal.required=Please choose an investment strategy.
+validator.uob.goal.required=Please choose your investment goal.
 validator.uob.wages.required=Salary/Wages is required.
 validator.uob.liquid.asset.required=Liquid asset is required.
 validator.uob.other.investments.required=Other investments are required.
