Code check in By Sagar for UAT issue fixing

--- a/Invessence/modules/web/src/main/resources/webmessages.properties
+++ b/Invessence/modules/web/src/main/resources/webmessages.properties
@@ -188,11 +188,12 @@ validator.uob.age.required=Age is required.
 validator.uob.plantoinvestamt.requiredMsg=Enter a number (years) for how long you plan to invest
 validator.uob.investamt.requiredMsg=Investment amount is required.
 validator.uob.goal.required=Please choose your investment goal.
-validator.uob.wages.required=Salary/Wages is required.
-validator.uob.liquid.asset.required=Liquid asset is required.
+validator.uob.wages.required=Salary/Wages are required.
+validator.uob.liquid.asset.required=Liquid asset are required.
 validator.uob.other.investments.required=Other investments are required.
-validator.uob.total.expenses.required=Total Expenses is required.
-validator.uob.total.debt.required=Total Debt is required.
+validator.uob.other.investmentsProp.required=Investment properties are required.
+validator.uob.total.expenses.required=Total expenses are required.
+validator.uob.total.debt.required=Total debt is required.
 validator.uob.employment.situation.required=Employment situation is required.
 validator.uob.sources.income.required=Sources of income is required.
 validator.uob.selection.required=Select one of the option.
